[gd_scene load_steps=3 format=3 uid="uid://bv1bpj0ag4iql"]

[ext_resource type="Script" path="res://UI/level_select.gd" id="1_nkme2"]
[ext_resource type="FontFile" uid="uid://cxlgmxicom4h2" path="res://Assets/Breads.ttf" id="2_8yhgg"]

[node name="Level_Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nkme2")

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 50
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = 56.0
offset_right = 82.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 30
text = "Difficulty:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -174.0
offset_right = 82.5
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 30
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hard" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 116.0
offset_right = 110.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 20
text = "Hard"

[node name="Easy" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 116.0
offset_right = -10.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 20
text = "Easy"

[node name="level1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -124.0
offset_right = -130.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 25
text = "1"

[node name="level2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -124.0
offset_right = -10.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 25
text = "2
"

[node name="level3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -124.0
offset_right = 110.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 25
text = "3
"

[node name="Endless" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_top = -124.0
offset_right = 230.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 25
text = "Endless
"

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 226.0
offset_right = 100.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8yhgg")
theme_override_font_sizes/font_size = 25
text = "Play"

[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Endless" to="." method="_on_endless_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
